<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black" android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="20dp">
        <TextView android:id="@+id/obTitle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/ob_title" android:textColor="@color/yellow"
            android:textSize="32sp" android:textStyle="bold" android:accessibilityHeading="true" />
        <TextView android:id="@+id/obQuestion"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
            android:text="@string/ob_question" android:textColor="@color/white" android:textSize="24sp" />
        <Button android:id="@+id/pBlind" style="@style/Sentia.BigButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/profile_blind" />
        <Button android:id="@+id/pDeaf" style="@style/Sentia.BigButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp" android:text="@string/profile_deaf" />
        <Button android:id="@+id/pBoth" style="@style/Sentia.BigButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp" android:text="@string/profile_both" />
        <Button android:id="@+id/pOther" style="@style/Sentia.BigButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp" android:text="@string/profile_other" />
    </LinearLayout>
</ScrollView>
